# Hybridised-TemporalDifferenceWeighted-Ensemble

./: .gitignore  MCAC algorithm.py  README.md  TD algorithm.py  demonstration.py  frozen_lake.py  gridworld_test.py  pyproject.toml  rl_tests.py  train_model.py
Deep-Q-Learning-with-Model-Based-Exploration-master/: DQN_Agent.py  DQN_Guided_Exploration.py  Evaluation_Plots.py  train_model.py
Deep-Q-Learning-with-Model-Based-Exploration-master/Evaluation/: Evaluation_Plots.py  Means.py
Deep-Q-Learning-with-Model-Based-Exploration-master/tdw/: tdw_ensemble.py  visualiser.py
Dyna-Q/: Dyna_Q_test.py
Evaluation/: Evaluation_Plots.py
HTDW-Learning - Copy/: .gitignore  DQN_Guided_Exploration.py  train_model.py
HTDW-Learning/Evaluation/: Evaluation_Plots.py
Hybridised-Temporal-Difference-Learning/: google_colab_notebook.ipynb
envs/: gridworld.py
jaxrl-main/jaxrl/agents/: __init__.py
model-based-atari-master/: config.py  main.py  utils.py
tdw/: tdw_ensemble.py
tdw-master/: .gitignore  Dockerfile  README.md  k8s.yaml
tdw-master/experiments/: evaluate.py  train.py
tdw-master/scripts/: build.sh  install.sh  up.sh
tdw-master/table/: ensemble_doubleslitenv_13x13.ipynb  ensemble_slitenv_13x13.ipynb  ensembles.py  env.py  evaluate_with_visualization.py  q_table.py  train.py  visualization.py
tdw-master/tdw/: buffer.py  dqn.py  dqn_model.py  env.py  experiment.py  exploration.py  score_table.py  visualizer.py
tdw-master/tdw/ensembles/: baseline.py  tdw.py
