[project]
name = "htdw-ensemble"
version = "0.1.0"
description = "HTDW makes use of accumulated TD errors to quantify the correctness of a model-based and model-free agent in terms of prediction errors and adjust contributions accordingly, as described in the paper 'Optimisation of Value Function Convergence with Hybridised Reinforcement Learning'"
authors = [
    {name = "SimonH",email = "professional.simonhossain@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "scipy (>=1.16.1,<2.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "gymnasium (>=1.2.0,<2.0.0)",
    "ale-py (>=0.11.2,<0.12.0)",
    "keras (>=3.11.3,<4.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
